CDK-639: Qualify DatasetDescriptor schema paths.
This uses the schema URI rather than schema URL where possible and adds
an accessor for the URI. This also replaces new URI(...) with URI.create
and eliminates the URISyntaxExceptions that were thrown.